[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handoff"
version = "0.1.3"
description = "Translate interactive session history between Codex, Claude Code, and a portable IR"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ai", "cli", "session", "codex", "claude"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = []

[project.scripts]
handoff = "handoff.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/handoff"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "PORTING.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
